# glinet4

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  examples.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish.yml  python-publish.yml
docs/superpowers/plans/: 2026-06-26-api-transport-boundary.md  2026-07-13-network-surface.md  2026-07-13-phase1-quick-wins.md  2026-07-13-phase2-error-lifecycle.md  2026-07-13-phase3-transport.md  2026-07-13-phase4-api.md  2026-07-13-vpn-surface.md
docs/superpowers/specs/: 2026-06-26-api-transport-boundary-design.md
gli4py/: __init__.py  _transport.py  _types.py  error_handling.py  glinet.py
glinet4/: __init__.py  _transport.py  _types.py  enums.py  error_codes.py  error_handling.py  glinet.py
glinet4/_routes/: __init__.py  clients.py  fan.py  firewall.py  network.py  services.py  system.py  tailscale.py  vpn.py  wan.py  wifi.py
stubs/passlib/: hash.pyi
tests/: conftest.py  test_enums.py  test_error_handling.py  test_exports.py  test_glinet.py  test_glinet_unit.py  test_routes_table.py  test_rpc_surface.py  test_state_machines.py  test_transport.py
tests/data/: rpc_catalog.json
