[project]
name = "glinet4"
version = "0.1.1"
description = "A Python 3 async API wrapper for GL.iNet routers (firmware 4.x JSON-RPC API)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "glinet4 contributors" }]
# Derived from HarvsG/gli4py (GPL-3.0). See NOTICE.
# Runtime dependencies.
dependencies = [
    "uplink>=0.10.0",
    "libpass>=1.8.0",
    "semver>=3.0.0",
    "aiohttp>=3.8.4",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/glinet4/glinet4"
Repository = "https://github.com/glinet4/glinet4"
Issues = "https://github.com/glinet4/glinet4/issues"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=7.2",
    "pytest-asyncio>=0.21",
    "python-dotenv>=1.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glinet4"]

[tool.hatch.build.targets.wheel.force-include]
"glinet4/py.typed" = "glinet4/py.typed"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["glinet4"]

[[tool.mypy.overrides]]
module = ["uplink", "passlib", "passlib.*"]
ignore_missing_imports = true
