[project]
name = "glinet4"
version = "0.1.1"
description = "A Python 3 async API wrapper for GL.iNet routers (firmware 4.x JSON-RPC API)"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [{ name = "glinet4 contributors" }]
keywords = ["gl-inet", "glinet", "router", "openwrt", "json-rpc", "async", "home-assistant"]
# No `License ::` classifiers: PEP 639 SPDX `license` above is already authoritative.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
# Derived from HarvsG/gli4py (GPL-3.0). See NOTICE.
# Runtime dependencies.
dependencies = [
    "uplink>=0.10.0",
    "libpass>=1.8.0",
    "semver>=3.0.0",
    "aiohttp>=3.8.4",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/glinet4/glinet4"
Repository = "https://github.com/glinet4/glinet4"
Issues = "https://github.com/glinet4/glinet4/issues"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pylint>=4",
    "pytest>=7.2",
    "pytest-asyncio>=0.21",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.0",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

# Flat layout: the glinet4 package lives at the repo root, not under src/.
[tool.uv.build-backend]
module-name = "glinet4"
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PT", "RET", "SIM", "PL"]
ignore = [
    "E501",
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.pylint.main]
py-version = "3.11"

[tool.pylint.messages_control]
# import-error is intentionally NOT disabled here: dependencies resolve fine
# under `uv run pylint` (the hook's entry point), so a real unresolved import
# is a real bug, not noise to silence.
disable = [
    "fixme",  # TODO/FIXME markers are tracked as follow-up work, not lint noise
    "line-too-long",  # ruff (E501, ignored) is the line-length authority, not pylint
    "invalid-name",  # short/firmware-mirroring names (sid, hsh, alg) don't fit pylint's naming conventions
    "too-many-public-methods",  # GLinet mirrors the router's flat JSON-RPC method surface; splitting it fights the API's shape
    "too-many-instance-attributes",  # same rationale as too-many-public-methods
    "too-few-public-methods",  # small typed data containers don't need N public methods to justify existing
    "too-many-branches",  # login()'s hash-algorithm dispatch reads clearer as one branch ladder than split helpers
    "abstract-method",  # uplink's Consumer stub methods (request, request_long_timeout) have no body; pylint misreads them as unimplemented abstracts -- remove with uplink (Phase 3)
    "overridden-final-method",  # uplink's metaclass-driven Consumer internals read as final to pylint's static analysis -- remove with uplink (Phase 3)
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["glinet4"]

[[tool.mypy.overrides]]
module = ["uplink", "passlib", "passlib.*"]
ignore_missing_imports = true
